@@ -82,13 +82,14 @@ Variable substitution may take any of the following forms:
 .RS
 .TP 15
 \fB$\fIname\fR
-\fIName\fR is the name of a scalar variable;  the name is terminated
-by any character that isn't a letter, digit, or underscore.
+\fIName\fR is the name of a scalar variable;  the name is a sequence
+of one or more characters that are a letter, digit, or underscore.
 .TP 15
 \fB$\fIname\fB(\fIindex\fB)\fR
 \fIName\fR gives the name of an array variable and \fIindex\fR gives
 the name of an element within that array.
-\fIName\fR must contain only letters, digits, and underscores.
+\fIName\fR must contain only letters, digits, and underscores,
+but may be an empty string.
 Command substitutions, variable substitutions, and backslash
 substitutions are performed on the characters of \fIindex\fR.
 .TP 15
